# PolyDebugger

./: .clang-format  CMakeLists.txt  README.md
PolyDebugger/: CMakeLists.txt  GeometrySceneView.qml  HilbertCurveScene.qml  PlineCombineScene.qml  PlineOffsetIslandsScene.qml  PlineOffsetScene.qml  casedata.cpp  casedata.h  datamanager.h  demofuncs.cpp  flatcolorgeometrynode.cpp  flatcolorgeometrynode.h  geometrycanvasitem.cpp  geometrycanvasitem.h  graphicshelpers.cpp  graphicshelpers.h  machinedefine.h  main.cpp  main.qml  plinecombinealgorithmview.cpp  plineoffsetalgorithmview.h  plineoffsetislandsalgorithmview.cpp  plineoffsetislandsalgorithmview.h  plinesegmentnode.cpp  plinesegmentnode.h  pointsetnode.cpp  qml.qrc  rawoffsetsegmentsnode.cpp  rawoffsetsegmentsnode.h  simplecirclenode.cpp  simplecirclenode.h  spatialindexboundingboxesnode.cpp  spatialindexboundingboxesnode.h
PolyDebugger/adaptor/: geometrycanvasitem.cpp  geometrycanvasitem.h  plinesegmentnode.cpp  plinesegmentnode.h  pointsetnode.cpp  pointsetnode.h  polylinenode.cpp  polylinenode.h  rawoffsetsegmentsnode.h  viewmodel.cpp  viewmodel.h
PolyDebugger/combine/: PlineCombineScene.qml  plinecombinealgorithmview.cpp  plinecombinealgorithmview.h
PolyDebugger/hilbert/: demofuncs.h
PolyDebugger/offset/: PlineOffsetScene.qml  plineoffsetalgorithmview.cpp  plineoffsetalgorithmview.h  rawoffsetsegmentsnode.cpp  rawoffsetsegmentsnode.h  spatialindexboundingboxesnode.h
PolyDebugger/offsetisland/: PlineOffsetIslandsScene.qml  plineoffsetislandsalgorithmview.cpp  plineoffsetislandsalgorithmview.h
PolyDebugger/settings/: DebuggerSettings.qml  settings.cpp  settings.h
cavc/: CMakeLists.txt  intrcircle2circle2.hpp  intrlineseg2circle2.hpp  intrlineseg2lineseg2.hpp  mathutils.hpp  plinesegment.hpp  polyline.hpp  polylinecombine.hpp  polylineintersects.hpp  polylineoffset.hpp  polylineoffsetislands.hpp  staticspatialindex.hpp  vector.hpp  vector2.hpp
cavc/internal/: common.hpp  diagnostics.hpp
clipper2/: CMakeLists.txt  clipper.core.h  clipper.engine.cpp  clipper.engine.h  clipper.export.h  clipper.h  clipper.minkowski.h  clipper.offset.cpp  clipper.offset.h  clipper.rectclip.cpp  clipper.rectclip.h
clipper2full/: CMakeLists.txt
clipper2full/BenchMark/: GetIntersectPtBenchmark.cpp  PointInPolygonBenchmark.cpp  StripDuplicateBenchmark.cpp
clipper2full/Clipper2Lib/include/clipper2/: clipper.core.h  clipper.engine.h  clipper.export.h  clipper.h  clipper.minkowski.h  clipper.offset.h  clipper.rectclip.h
clipper2full/Clipper2Lib/src/: clipper.engine.cpp  clipper.offset.cpp  clipper.rectclip.cpp
clipper2full/Examples/Benchmarks/: Benchmarks.cpp
clipper2full/Examples/Inflate/: Inflate.cpp
clipper2full/Examples/PolygonSamples/: PolygonSamples.cpp
clipper2full/Examples/RandomClipping/: RandomClipping.cpp
clipper2full/Examples/RectClipping/: RectClipping.cpp
clipper2full/Examples/SimpleClipping/: SimpleClipping.cpp
clipper2full/Examples/UnionClipping/: UnionClipping.cpp
clipper2full/Examples/UsingZ/: UsingZ.cpp
clipper2full/Examples/VariableOffset/: VariableOffset.cpp
clipper2full/Utils/: ClipFileLoad.cpp  ClipFileLoad.h  ClipFileSave.cpp  ClipFileSave.h  Colors.h  CommonUtils.h  Timer.h  clipper.svg.cpp  clipper.svg.h  clipper.svg.utils.h
ngpoly/: CMakeLists.txt  ngpolygonset.cpp  ngpolygonset.h
